changed some css styles

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -1,14 +1,13 @@
 .search {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    width: 90vw;
-    margin-top: 200px;
+    /* display: flex; */
+    /* justify-content: space-around; */
+    /* flex-wrap: wrap; */
+    margin: 100px auto;
+    /* width: 90vw; */
 }
 
 .search-form-container, .search-result-container {
-    width: 420px;
+    /* width: 420px; */
     height: auto;
     padding: 10px;
     border-radius: 10px;
@@ -24,10 +23,10 @@
 .search-form-container>form>input {
     background-color: white;
     height: 50px;
-    width: 375px;
+    width: 100%;
     padding: 10px;
     border: none;
-    margin: 0 10px 10px 10px;
+    margin: 10px 0;
     border-radius: 5px;
 }
 
