--- a/src/Components/HeaderNavbar/HeaderNavbar.css
+++ b/src/Components/HeaderNavbar/HeaderNavbar.css
@@ -4,6 +4,7 @@
     top: 0;
     left: 0;
     right: 0;
+    background-color: white;
 }
 .mainLogo {
     width: 225px;
@@ -13,8 +14,8 @@
 .navLinks > a {
     color: #1a1a1a;
     font-weight: 500;
-    margin: 40px 20px;
-    line-height: 20px;
+    margin: 0px 20px;
+    line-height: 40px;
 }
 
 #userName {
@@ -26,8 +27,11 @@
     color: white;
     font-weight: 500;
     background-color: #ff6e40;
-    padding: 12px 40px;
-    margin-top: 30px;
+    padding: 0;
+    margin-top: 0px;
     border-radius: 5px;
-    /* margin: 20px 20px; */
+    height: 40px;
+    line-height: 40px;
+    width: 80px;
+    text-align: center;
 }
